[package]
name = "chafa-sys"
version = "0.1.4"
edition = "2021"
links = "chafa"
authors = ["frectonz"]
license = "MIT"
homepage = "https://github.com/frectonz/chafa"
description = "FFI bindings to Chafa"

[build-dependencies]
bindgen = "0.69.1"
pkg-config = "0.3.27"

[dev-dependencies]
image = "0.24.7"
terminal_size = "0.3.0"
