[package]
name = "chafa"
version = "0.1.0"
edition = "2021"
authors = ["frectonz"]
license = "MIT"
homepage = "https://github.com/frectonz/chafa"
description = "Safe wrapper around chafa"

[dependencies]
chafa-sys = { version = "0.1.4", path = "../chafa-sys" }
terminal_size = "0.3.0"

[dev-dependencies]
image = "0.24.7"
